--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div
   id="nav-closed"
-  class="col-1 d-flex flex-column flex-shrink-0 py-3 bg-light sticky-top text-center"
+  class="d-none d-xl-flex col-1 flex-column flex-shrink-0 py-3 bg-light sticky-top text-center"
   style="height: 100vh;"
 >
   <ul class="nav nav-pills flex-column">
