add responsive navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
 <body>
 
 <div class="row d-flex colblur" id="website">
-  <%= render 'layouts/navbar' %>
+  <%= render 'layouts/navbar_responsive' %>
+  <%= render 'layouts/navbar' %> 
   <div class="col box">
 
     <% unless controller_name == "articles" && action_name == "index" %>
