--- a/app/views/searches/_results_list.html.erb
+++ b/app/views/searches/_results_list.html.erb
@@ -14,7 +14,9 @@
       <%= image_tag(article.picture, class: 'img-thumbnail') %>
     </div>
     <div class="col-5 clickable">
-      <a href="<%= article_path(article.id) %>"><h4 class="word-wrap"><%= article.title %></h4></a>
+      <%= link_to article_path(article.id) do %>
+        <h4 class="word-wrap"><%= article.title %></h4>
+      <% end %>
       <p class="text-end fst-italic fs-6"><%= article.user.first_name %> <%= article.user.last_name %></p>
       <p class="text-start word-wrap"><%= article.short_summary %></p>
     </div>
@@ -49,7 +51,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-center mt-4">
-        <a href="<%= article_path(article.id) %>" class="btn btn-primary hover">Voir article</a>
+        <%= link_to 'Voir article', article_path(article.id), class: 'btn btn-primary hover' %>
       </div>
     </div>
   </div>
