--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,4 @@
-<div%= stylesheet_link_tag "article_show" %>
+<%= stylesheet_link_tag "article_show" %>
 <div class="col">
     <div class="offset-2 col-12 col-xl-8 mx-auto">
         <div class="card border-secondary p-4 justify-content-center bg-light above-small shadow-lg">
