add category in responsive navbar

--- a/app/views/layouts/_navbar_responsive.html.erb
+++ b/app/views/layouts/_navbar_responsive.html.erb
@@ -21,11 +21,10 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Catégories</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
+          <% categories.each do |category| %>
+          <a class="dropdown-item" href="<%= category_path(category.id) %>"><%= category.name %></a>
+        <% end %>        
+            
           </div>
         </li>
       </ul>
