--- a/app/views/layouts/_header_big.html.erb
+++ b/app/views/layouts/_header_big.html.erb
@@ -16,7 +16,7 @@
       <div class="text-white">
         <%= image_tag asset_path("logoGaffex.png") %>
         <p class="mb-4">
-            Développé par des bénévoles, GAFFEx est un outil qui permet aux scientifiques de partager leurs échecs avec la communauté scientifique mondiale. Notre objectif est d’aider les chercheurs à économiser du temps et des ressources précieux en ne répétant pas des expériences qui ont déjà éhouées. GAFFEx est une plateforme librement accessible basée sur un système d’évaluation pondéré par des pairs indépendants. 
+            Développé par des bénévoles, GAFFEx est un outil qui permet aux scientifiques de partager leurs échecs avec la communauté scientifique mondiale. Notre objectif est d’aider les chercheurs à économiser du temps et des ressources précieux en ne répétant pas des expériences qui ont déjà échouées. GAFFEx est une plateforme librement accessible basée sur un système d’évaluation pondéré par des pairs indépendants. 
         </p>
         <p class="mb-4"></p>
       </div>
