--- a/app/views/layouts/_categories_dropdown_opened.html.erb
+++ b/app/views/layouts/_categories_dropdown_opened.html.erb
@@ -2,7 +2,6 @@
   <ul class="nav nav-pills flex-column">
     <li class="nav-item ms-4 mt-3">
       <a
-        href="#"
         class="
             ms-2
             d-flex
@@ -25,7 +24,7 @@
         style=""
       >
         <% categories.each do |category| %>
-          <li><a class="dropdown-item" href="<%= category_path(category.id) %>"><%= category.name %></a></li>
+          <li><%= link_to category.name, category_path(category.id), class: 'dropdown-item' %></li>
         <% end %>
       </ul>
     </li>
