--- a/app/views/layouts/_navbar_responsive.html.erb
+++ b/app/views/layouts/_navbar_responsive.html.erb
@@ -1,35 +1,36 @@
 <nav class=" d-flex d-xl-none navbar navbar-expand-xl navbar-dark bg-primary">
   <div class="container-fluid">
-    <%=link_to "GAFFEx", root_path, class:"navbar-brand"%> 
-     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+    <%=link_to "GAFFEx", root_path, class:"navbar-brand"%>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
+      aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarColor03">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="<%= root_path %>">Accueil
-            <span class="visually-hidden">(current)</span>
+          <%=link_to "Accueil", root_path, class:"nav-link active"%>
+          <span class="visually-hidden">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="<%= new_article_path %>">Nouvel Article</a>
+          <%=link_to "Nouvel Article", new_article_path, class:"nav-link" %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="<%= about_gaffex_path %>">Qu'est-ce que le Gaffex ?</a>
-        </li> 
+          <%=link_to "Qu'est-ce que le Gaffex ?", about_gaffex_path, class:"nav-link" %>
+        </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Catégories</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+            aria-expanded="false">Catégories</a>
           <div class="dropdown-menu">
-          <% categories.each do |category| %>
-          <a class="dropdown-item" href="<%= category_path(category.id) %>"><%= category.name %></a>
-        <% end %>        
-            
+            <% categories.each do |category| %>
+            <%=link_to category.name, category_path(category.id), class:"dropdown-item"%>
+            <% end %>
+
           </div>
         </li>
       </ul>
-      
+
     </div>
   </div>
 </nav>
-
