--- a/app/views/layouts/_navbar_responsive.html.erb
+++ b/app/views/layouts/_navbar_responsive.html.erb
@@ -53,9 +53,9 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true"
             aria-expanded="false">Catégories</a>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu bg-light">
             <% categories.each do |category| %>
-            <%=link_to category.name, category_path(category.id), class:"dropdown-item"%>
+            <%=link_to category.name, category_path(category.id), class:"dropdown-item bg-light"%>
             <% end %>
 
           </div>
