--- a/app/views/articles/_article_list.html.erb
+++ b/app/views/articles/_article_list.html.erb
@@ -8,10 +8,10 @@
 </div>
 <% @articles.each_with_index do |article, index| %>
   <div class="preview-article row mt-4">
-    <div class="container d-flex justify-content-center col-2 col-md-4 border-primary" style="max-height: 18vh">
+    <div class=" d-none d-md-flex container justify-content-center col-2 col-md-4 border-primary" style="max-height: 18vh">
       <%= image_tag(article.picture, class: 'img-thumbnail') %>
     </div>
-    <div class="col-5 clickable">
+    <div class="col-8 col-md-5 clickable ms-2">
       <%= link_to article_path(article.id) do %>
         <h4 class="word-wrap"><%= article.title %></h4>
       <% end %>
