--- a/app/views/profiles/_profile_article_list.html.erb
+++ b/app/views/profiles/_profile_article_list.html.erb
@@ -1,9 +1,9 @@
 <% @user.articles.order("updated_at DESC").each_with_index do |article, index| %>
   <div class="preview-article row mt-4">
-    <div class="container d-flex justify-content-center col-2 col-md-4 border-primary" style="max-height: 18vh">
+    <div class="container d-none d-md-flex justify-content-center col-2 col-md-4 border-primary" style="max-height: 18vh">
       <%= image_tag(article.picture, class: 'img-thumbnail') %>
     </div>
-    <div class="col-5 clickable">
+    <div class="col-8 col-md-5 clickable ms-2">
       <%= link_to article_path(article.id), class: 'word-wrap' do %>
         <h4 class=""><%= article.title %></h4>
       <% end %>
