added a new css class to remove hover from primary buttons where needed

--- a/app/views/articles/_details_article_show.html.erb
+++ b/app/views/articles/_details_article_show.html.erb
@@ -34,7 +34,7 @@
 <div class="forpdf text-center mx-3 mb-2 mt-4">
   <small class="">Mots clés :</small><br/>
   <% @article.keywords.each do |keyword| %>
-    <p class="btn btn-primary mt-2" style="cursor: unset"><%= keyword.name %></p>
+    <p class="btn btn-primary-no-hover mt-2" style="cursor: unset"><%= keyword.name %></p>
   <% end %>
 </div>
 
