added responsive to text and logo from big header

--- a/app/views/layouts/_header_big.html.erb
+++ b/app/views/layouts/_header_big.html.erb
@@ -12,9 +12,9 @@
   <span style="filter: blur(8px)"></span>
   <div class="mask" style="background-color: rgba(0, 0, 0, 0.8)">
     <div class="d-flex justify-content-center align-items-center h-100 mb-5">
-      <div class="text-white">
-        <%= image_tag asset_path("logoGaffex.png") %>
-        <p class="mb-4">
+      <div class="text-white px-3">
+        <%= image_tag asset_path("logoGaffex.png"), class: "img-fluid"%>
+        <p class="mb-4 container-fluid">
             Développé par des bénévoles, GAFFEx est un outil qui permet aux scientifiques de partager leurs échecs avec la communauté scientifique mondiale. Notre objectif est d’aider les chercheurs à économiser du temps et des ressources précieux en ne répétant pas des expériences qui ont déjà échouées. GAFFEx est une plateforme librement accessible basée sur un système d’évaluation pondéré par des pairs indépendants. 
         </p>
         <p class="mb-4"></p>
