called the partial instead of the whole user div, changed the top margin to responsive and changed the margin size for smaller screens

--- a/app/views/layouts/_navbar_responsive.html.erb
+++ b/app/views/layouts/_navbar_responsive.html.erb
@@ -1,35 +1,6 @@
 <nav class=" d-flex d-xl-none navbar navbar-expand-xl navbar-dark bg-primary">
   <div class="container-fluid">
-    <div class="dropdown">
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="ms-md-4 d-flex text-center align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-            <% if user_signed_in? && current_user.avatar.attached? %>
-            <%= image_tag(current_user.avatar, class: 'ms-4 rounded-circle me-2', width: 38, height: 38) %>
-            <strong><%= current_user.first_name %></strong>
-            <% elsif user_signed_in? %>
-            <%= image_tag(asset_path('default_avatar.png'), class: 'ms-4 rounded-circle me-2', width: 38, height: 38) %>
-            <strong><%= current_user.first_name %></strong>
-            <% else %>
-            <%= image_tag(asset_path('default_avatar.png'), class: 'ms-4 rounded-circle me-2', width: 38, height: 38) %>
-            <strong>Visiteur</strong>
-            <% end %>
-          </a>
-          <ul class="dropdown-menu text-small shadow bg-light" aria-labelledby="dropdownUser2" style="">
-            <% if user_signed_in? %>
-            <li><%= link_to 'Profil', profile_path(current_user.id), class: 'dropdown-item'%></li>
-            <li><%= link_to 'Me Déconnecter', destroy_user_session_path, class: 'dropdown-item', method: 'delete' %>
-            </li>
-
-            <% else %>
-            <li><%= link_to 'Me Connecter', new_user_session_path, class: 'dropdown-item'%></li>
-            <li><%= link_to 'Inscription', new_user_registration_path, class: 'dropdown-item'%></li>
-
-            <% end %>
-          </ul>
-        </li>
-      </ul>
-    </div>
+    <%= render 'layouts/user_dropdown_opened' %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
       aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
