spelling devise/confirmations/new

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="offset-2 col-12 col-xl-6 mx-auto">
   <div class="card text-center border-secondary py-4 bg-light above-small shadow-lg">
-    <h3>Envoie des instructions de confirmation</h3>
+    <h3>Envoi des instructions de confirmation</h3>
     <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
       <div class="field mt-2">
